Box view on mobile- tabs have 2 arrows (bug 3122)

--- a/Zbang.Cloudents.Mobile/Content/SiteMobile.less
+++ b/Zbang.Cloudents.Mobile/Content/SiteMobile.less
@@ -875,8 +875,8 @@ header
         height: 90px;
         background: #fff;
         text-align: center;
-        display: inline-block;
-        margin-top: 25px;
+        display: block;
+        margin: 25px auto 0;
         &:before
         {
             content: '';
@@ -1139,21 +1139,20 @@ header
 
 .uploadItemsBox {
     display: block;
-    width: 92px;
+    width: 84px; //diff rtl //Note: Because there are no items in the options this min width is necessary
     overflow: hidden;
     position: relative;
-    &:after
-    {
+    &:after {
         .pseudo;
         width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 4px 4px 0 4px;
-    border-color: #000 transparent transparent transparent;
-    pointer-events: none;
-    position: absolute;
-    top: 12px;
-    right: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 4px 4px 0 4px;
+        border-color: #000 transparent transparent transparent;
+        pointer-events: none;
+        position: absolute;
+        top: 10px;
+        right: 0; //rtl
     }
 }
 
