--- a/Zbang.Cloudents.Mobile/Content/SiteMobileRtl.css
+++ b/Zbang.Cloudents.Mobile/Content/SiteMobileRtl.css
@@ -196,6 +196,13 @@
   /*rtl*/
   right: auto;
 }
+.uploadItemsBox {
+  width: 94px;
+}
+.uploadItemsBox:after {
+  left: 0;
+  right: auto;
+}
 .boxHeader:after {
   margin: -2px 6px 0 0;
 }
